--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Trifold",
   "version": "1.0.0",
-  "description": "Trifold is an all-encompassing marriage app that gives you faith-based curated answers to prevailing marital issues.",
+  "description": "Trifold--Happy Marriages, Flourishing Homes.",
   "private": true,
   "scripts": {
     "dev": "nuxt",
