--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Trifold",
+  "name": "trifold",
   "version": "1.0.0",
   "description": "Trifold--Happy Marriages, Flourishing Homes.",
   "private": true,
