--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "fibers": "^5.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0"
