--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/pwa": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/toast": "^3.3.1",
+    "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
     "nuxt-sweetalert2": "^1.0.0",
